# obd-socketio

./: .gitignore  README.md  setup.cfg
.github/workflows/: python-publish.yml
src/obdio/: __init__.py  encoder.py  obdio.py
