[metadata]
name = obd-socketio
version = 0.0.1
author = Bennett Gunson
author_email = bengunson@gmail.com
description = Expose python-OBD through an async socketio server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgunson.obd-socketio
project_urls =
    Bug Tracker = https://github.com/bgunson/obd-socketio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    obd
    eventlet

[options.packages.find]
where = src