[metadata]
name = obd-socketio
version = 0.3.1
author = Bennett Gunson
author_email = bengunson@gmail.com
description = Expose python-OBD through an async socketio server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgunson/obd-socketio
project_urls =
    Bug Tracker = https://github.com/bgunson/obd-socketio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    obd
    python-socketio
    uvicorn
    websockets

[options.packages.find]
where = src